[package]
name = "llama-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-nn = "0.3.1"
candle-transformers = "0.3.1"
console_error_panic_hook = "0.1.7"
gloo = "0.10.0"
js-sys = "0.3.65"
log = "0.4.20"
num-traits = "0.2.17"
rand = "0.8.5"
serde = "1.0.192"
serde_json = "1.0.108"
tokenizers = { version = "0.14.1", features = ["unstable_wasm"] }
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
wasm-logger = "0.2.0"
yew = "0.21.0"
yew-agent = "0.3.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Blob',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Request',
  'RequestCache',
  'RequestInit',
  'RequestMode',
  'Response',
  'Performance',
]
