[package]
name = "llama-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
log = "0.4"
rand = "0.8.5"
num-traits = "0.2.15"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
candle-core = "0.3.1"
candle-nn = "0.3.1"
candle-transformers = "0.3.1"
console_error_panic_hook = "0.1.7"
tokenizers = { version = "0.13.4", default-features = false, features = ["unstable_wasm"]}
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.8"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2"
yew-agent = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Blob',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Request',
  'RequestCache',
  'RequestInit',
  'RequestMode',
  'Response',
  'Performance',
]
